--- a/index.css
+++ b/index.css
@@ -1,5 +1,90 @@
-#person-img{
-    width: 15rem;
-    filter: brightness(100%);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+}
+body{
+    background: rgb(230, 234, 236);
+    display: flex;
+    justify-content: center;
+   
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   margin: 5rem;
+    width: 30rem;
+    height: 30rem;
+}
+h2{
+    font-size: 2rem;
+    letter-spacing: 0.2rem;
+}
+h4{
+    padding: 1rem 1rem 0 1rem;
+    letter-spacing: 0.1rem;
+    
+}
+#job{
+    color:rgb(114, 207, 247);
+    letter-spacing: 0.1rem;
+    font-weight: 900;
+    font-size: larger;
+}
+p{
+    padding: 0.5rem 0;
+    text-align: center;
 
+}
+.underline{
+    width: 7rem;
+    background: rgb(114, 207, 247);
+    border-radius: 0.1rem;
+    height: 0.3rem;
+    margin-left: 3rem;
+    margin-top: 0.5rem;
+}
+#person-img{
+    width: 10rem;
+    filter: brightness(100%);
+    border-radius: 50%;
+    filter: drop-shadow(0.2rem 0.2rem 0.2rem gray);
+
+}
+.review{
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    margin-top: 3rem;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    filter: drop-shadow(0.2rem 0.2rem 0.2rem gray);
+}
+.button-container{
+    padding: 1rem ;
+    
+}
+.prev-btn,.next-btn{
+    border: none;
+    background: #fff;
+    color: rgb(114, 207, 247);
+    font-size: 1rem;
+    font-weight: 900;
+    padding: 0 0.5rem;
+    cursor: pointer;
+}
+.random-btn{
+    border: 0.15rem solid rgba(114, 207, 247,0.5);
+    border-radius: 0.3rem;
+    filter: drop-shadow(0.2rem 0.2rem 0.2rem gray);
+    color: rgb(114, 207, 247);
+    font-weight: 900;
+    font-size: 1rem;
+    padding: 0.1rem 0.2rem;
+    cursor: pointer;
 }
